# FaceRecognition

./: .gitignore  CMakeLists.txt  README.md  avlue.txt  build.bat
demo/: webcam_demo.cc  worker.cc
src/: blazeface_detector.cc  blazepose_landmark.cc  clipper.cc  face_detect_aligner.cc  hair_segmentation.cc  monodepth.cc  tnn_sdk_sample.cc  youtu_face_align.cc
